--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,8 @@
         "laravel-frontend-presets/material-dashboard": "^1.0",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
+        "spatie/laravel-json-api-paginate": "^1.5",
+        "spatie/laravel-query-builder": "^2.0",
         "yajra/laravel-datatables-oracle": "^9.4"
     },
     "require-dev": {
